# twitch_data_ingestion

./: .env  .gitignore  README.md  compose.dev.yaml  compose.yaml  main.py  pyproject.toml  twitch_api_client.py  twitch_monitor.py
apps/api/: Dockerfile  pyproject.toml
apps/api/api/: main.py  models.py
apps/client_api/: Dockerfile
apps/client_api/client_api/: __main__.py  api.py  db.py  main.py  models.py
apps/data_ingestor/: .env.template  Dockerfile  pyproject.toml
apps/data_ingestor/data_ingestor/: __main__.py
apps/data_processing/: pyproject.toml
apps/data_processing/data_processing/: __main__.py  chat_processor.py  config.py  twitch_api_client.py
apps/data_processor/: Dockerfile  data_processor.cron  entrypoint.sh
apps/data_processor/data_processor/: __main__.py
apps/twitch_data_ingestor/: Dockerfile  pyproject.toml
apps/twitch_data_ingestor/tests/twitch_data_ingestor/: test_twitch_monitor.py
apps/twitch_data_ingestor/twitch_data_ingestor/: __init__.py  __main__.py
builds/api/: Dockerfile
builds/twitch_data_ingestor/: Dockerfile
core/: pyproject.toml
core/core/chat_ingestion/: base_ingestor.py  chat_ingestor.py  twitch_monitor.py
core/core/scripts/dev/: delete_coords.py
core/core/scripts/process_chats/: __main__.py  calc_3d_embedding.py  utils.py  (+4 more)
core/core/utils/: __init__.py  config.py
src/: test_streams.json
src/api/: main.py
src/tests/twitch_data_ingestor/: conftest.py  test_twitch_monitor.py
src/twitch_data_ingestor/: __main__.py  base_ingestor.py  chat_ingestor.py  config.py  twitch_api_client.py  twitch_monitor.py
