[project]
name = "twitch_data_api"
version = "0.1.0"
description = "A REST API service for the web interface"
authors = [{ name = "Ben Ledingham" }]
dependencies = [
    "requests",
    "pytest-cov",
    "python-dotenv",
    "ruff",
    "pymongo",
    "fastapi",
    "uvicorn",
    "pydantic"
]
requires-python = ">=3.10"
