[project]
name = "data-processing"
version = "0.1.0"
description = "Data processing service for twitch chats"
authors = [{ name = "Ben Ledingham" }]
dependencies = [
    "requests",
    "pytest-cov",
    "python-dotenv",
    "ruff",
    "pymongo",
    "fastapi",
    "uvicorn"
]
requires-python = ">=3.10"
